Made the code changes to generate the Okta auth url and forward to it

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<h1>Welcome to the Heidrick & Struggles POC App</h1>
+<div *ngIf="isAuthenticated">
+    <h1>Welcome to the Heidrick & Struggles POC App</h1>
 
-<h2>You are currently logged in as {{ user }}</h2>
+    <h2>You are currently logged in as {{ user }}</h2>
 
-<navigation></navigation>
+    <navigation></navigation>
+</div>
 
 <router-outlet></router-outlet>
