Added the code to fetch the currenlty logged user from the jwt token obtained from okta

--- a/src/app/components/auth/login-callback.component.html
+++ b/src/app/components/auth/login-callback.component.html
@@ -3,3 +3,5 @@
 <div>The Authentication Code is {{authCode}}</div>
 <div>State is {{state}}</div>
 <div>States {{isStatesMatch ? "Match" : "Do Not Match"}}</div>
+
+<div>User Logged in is {{user}}</div>
