Implemented the logout functionality

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -8,4 +8,13 @@
     <div class="entry" [ngClass]="{selected: activeSelection === 'about'}" (click)="navigateTo('about')">
         About
     </div>
+    <div class="entry" [ngClass]="{selected: activeSelection === 'tazio'}" (click)="navigateTo('tazio')">
+        Tazio
+    </div>
+    <div class="entry" [ngClass]="{selected: activeSelection === 'eightfold'}" (click)="navigateTo('eightfold')">
+        Eightfold
+    </div>
+    <div class="entry" [ngClass]="{selected: activeSelection === 'logout'}" (click)="navigateTo('logout')">
+        Logout
+    </div>
 </div>
